# adb-rust

./: .gitignore  Cargo.toml  README.html  README.md
src/: adb_plugin.rs  cmd.rs  lib.rs  logCat.rs
